@startuml
class CommandDTO {
}
class SampleCommand <<partial>> {
    + SampleCommand(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> ExecuteCommand() : CommandDTO
}
class CommandTypesDispatcher <<static>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class "List`1"<T> {
}
BaseDTO <|-- CommandDTO
CommandDTO --> "TypeId" Guid
CommandDTO o-> "Response" Boolean
CommandDTO o-> "Arguments<PropertyDTO>" "List`1"
CommandWrapper <|-- SampleCommand
SampleCommand --> "TypeId" Guid
SampleCommand --> "Cmd" CommandDTO
SampleCommand --> "FirstOne" String
SampleCommand --> "SecondOne" Boolean
@enduml
